<resources>
    <string name="app_name">Tootors</string>
    <string name="app_name2">TOOTORS</string>

    <string name="action_settings">Settings</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_login">Login</string>
    <string name="action_open_map">Open Map</string>
    <string name="action_tooter">Tootors List</string>


    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="email">Email</string>
    <string name="email2">Confirm Email</string>
    <string name="phone">Phone</string>
    <string name="streetaddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">ZIP Code</string>


    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="student_button">I Need a Tutor</string>
    <string name="tutor_button">I am a Tutor</string>

    <string name="emptyString" />
    <string name="title_activity_user_type">UserTypeActivity</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="focus">Focus</string>
    <string name="at_username">\@%s</string>
    <string name="text">Text</string>
    <string name="is_tootor">I am a Tootor!</string>
    <string name="hourly_rate">$%.2f / hr</string>
    <string name="want_to_tootor">I want to be a Tootor! </string>
    <string name="video_link">Video Link</string>
</resources>
