<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tootors.tootors.MainTootorsActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_signup"
        android:title="@string/action_signup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_map"
        android:title="@string/action_open_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tootor"
        android:title="@string/action_tooter"
        app:showAsAction="never" />

</menu>
