<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tootors.tootors.LoginActivity
    "
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name2"
        android:id="@+id/app_name"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/app_name_font_size"
        android:textColor="#0097d8"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageIcon"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/mainicon"
        android:layout_below="@+id/app_name"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/username"
        android:layout_below="@+id/imageIcon"
        android:textSize="@dimen/main_font_size"

        android:textStyle="bold"
        android:textColor="#0097d8" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_input"
        android:layout_below="@+id/username"

       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/password"
        android:layout_below="@+id/username_input"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_input"
        android:layout_below="@+id/password"
        android:layout_marginBottom="10dp"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_below="@+id/password_input"
        android:onClick="onButtonClick"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:background="#2b2b2b"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signup_button"
        android:layout_below="@+id/login_button"
        android:onClick="onButtonClick"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:background="#2b2b2b" />



</LinearLayout>
