<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tootors.tootors.SignUpTutorActivity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fullname"
        android:id="@+id/fullname_tutor_signup"
        android:textSize="@dimen/main_font_size"
        android:textStyle="bold"
        android:textColor="#0097d8" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullname_input_tutor_signup"
        android:layout_below="@+id/fullname_tutor_signup"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/username_tutor_signup"
        android:textSize="@dimen/main_font_size"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:layout_below="@+id/fullname_input_tutor_signup"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_input_tutor_signup"
        android:layout_below="@+id/username_tutor_signup"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/password_tutor_signup"
        android:layout_below="@+id/username_input_tutor_signup"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_input_tutor_signup"
        android:layout_below="@+id/password_tutor_signup"
        android:layout_marginBottom="10dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password2"
        android:id="@+id/password2_tutor_signup"
        android:layout_below="@+id/password_input_tutor_signup"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password2_input_tutor_signup"
        android:layout_below="@+id/password2_tutor_signup"
        android:layout_marginBottom="10dp"

        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/email_tutor_signup"
        android:layout_below="@+id/username_input_tutor_signup"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textPassword"
        android:ems="10"
        android:id="@+id/email_input_tutor_signup"
        android:layout_below="@+id/email_tutor_signup"
        android:layout_marginBottom="10dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email2"
        android:id="@+id/email2_tutor_signup"
        android:layout_below="@+id/email_input_tutor_signup"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textPassword"
        android:ems="10"
        android:id="@+id/email2_input_tutor_signup"
        android:layout_below="@+id/email2_tutor_signup"
        android:layout_marginBottom="10dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/phone"
        android:id="@+id/phone_tutor_signup"
        android:layout_below="@+id/email2_input_tutor_signup"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_input_tutor_signup"
        android:layout_below="@+id/phone_tutor_signup"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/streetaddress"
        android:id="@+id/streetaddress_tutor_signup"
        android:layout_below="@+id/phone_input_tutor_signup"
        android:textStyle="bold"
        android:textColor="#0097d8"
        android:textSize="@dimen/main_font_size"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/streetaddress_input_tutor_signup"
        android:layout_below="@+id/streetaddress_tutor_signup"
        />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/city"
                android:id="@+id/city_tutor_signup"
                android:layout_below="@+id/streetaddress_input_tutor_signup"
                android:textStyle="bold"
                android:textColor="#0097d8"
                android:textSize="@dimen/main_font_size"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/city_input_tutor_signup"
                android:layout_below="@+id/city_tutor_signup"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/state"
                android:id="@+id/state_tutor_signup"
                android:layout_below="@+id/city_input_tutor_signup"
                android:textStyle="bold"
                android:textColor="#0097d8"
                android:textSize="@dimen/main_font_size"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/state_input_tutor_signup"
                android:layout_below="@+id/city_tutor_signup"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/zip"
                android:id="@+id/zip_tutor_signup"
                android:layout_below="@+id/state_input_tutor_signup"
                android:textStyle="bold"
                android:textColor="#0097d8"
                android:textSize="@dimen/main_font_size"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/zip_input_tutor_signup"
                android:layout_below="@+id/zip_tutor_signup"
                android:inputType="number|textPostalAddress"

                />


            <Button
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/signup_button_final"
              android:layout_below="@+id/zip_input_tutor_signup"
              android:onClick="onButtonClick"
              android:layout_gravity="center_horizontal"
              android:textColor="#FFFFFF"
              android:background="#2b2b2b" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
