<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0097d8"
            android:textStyle="bold" />

        <TextView
            android:visibility="gone"
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_username" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/profile_tootor_info">

            <TextView
                android:id="@+id/profile_is_tootor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#0097d8"
                android:textStyle="bold"
                android:text="@string/is_tootor" />

            <TextView
                android:id="@+id/profile_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hourly_rate" />


        </LinearLayout>

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:src="@drawable/contacticon" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:textColor="#FFFFFF"
                android:background="#2b2b2b"
                android:layout_margin="10dp"
                android:id="@+id/my_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onButtonClick"
                android:text="My Account" />

            <Button
                android:textColor="#FFFFFF"
                android:background="#2b2b2b"
                android:layout_margin="10dp"
                android:id="@+id/search_tootor_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onButtonClick"
                android:text="Search Tootors" />

            <Button
                android:textColor="#FFFFFF"
                android:background="#2b2b2b"
                android:layout_margin="10dp"
                android:id="@+id/search_tootor_map_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:linksClickable="true"
                android:onClick="onButtonClick"
                android:text="Search Tootors on Map" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>